--- a/src/Pages/Home.css
+++ b/src/Pages/Home.css
@@ -2,7 +2,6 @@
   display: flex;
   gap: 10px;
   flex-wrap: wrap;
-
 }
 
 .card {
@@ -12,4 +11,5 @@
 
 .filter {
   display: flex;
+  margin-bottom: 20px;
 }
